--- a/css/styles.css
+++ b/css/styles.css
@@ -5,21 +5,36 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+.marco {
+  border:none;
+     -webkit-box-shadow: -1px 2px 3px 0px rgba(181, 175, 181, 1);
+     -moz-box-shadow: -1px 2px 3px 0px rgba(181, 175, 181, 1);
+     box-shadow: -1px 2px 3px 0px rgba(181, 175, 181, 1);
+ }
 body{
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Josefin Sans', sans-serif!important;
 }
 .-text-center{
   text-align: center;
 }
-.border-bottom{
+.-border-bottom{
   border-bottom: 1px solid #A4A4A4;
 }
 .verde{
   color: rgba(56, 234, 118, .8);
 }
-.-mb{
-  margin-bottom: 1rem;
+.scroll::-webkit-scrollbar{
+  width: 9px;
 }
+.scroll::-webkit-scrollbar-track {
+  background-color:#fff;
+  border-radius: 5px; 
+} 
+.scroll::-webkit-scrollbar-thumb {
+  background-color:  rgba(204, 204, 204, 0.7);
+  border-radius: 5px;
+} 
+
 
 /* banner */
 .banner{
@@ -75,7 +90,7 @@ header a{
 .content-banner{
   display: flex;
   justify-content: center;
-  align-items:;
+  /* align-items: center; */
   height: 500px;
 /*   border: solid; */
   margin-top: 80px;
@@ -194,11 +209,11 @@ header a{
 
 /* Footer */
 /* Formulario */
-form{
+.-form{
   margin: 80px 0;
   display: flex;
 }
-form h3{
+.-form h3{
     font-size: 2rem;
     line-height: 2rem;
 /*     margin-bottom: 20px; */
@@ -227,7 +242,7 @@ input, textarea{
   font-size: 20px;
   color: #a4a4a4;
 }
-form .submit{
+.-form .submit{
   display: inline-block;
   margin: auto;
   background: rgba(56, 234, 118);
@@ -239,12 +254,12 @@ form .submit{
   text-decoration: none;
   font-size: 1.2rem;
 }
-form .submit:hover{
+.-form .submit:hover{
   background: rgba(83, 234, 56);
 }
-.is{
+/* .is{
   width: 80%;
-}
+} */
 
 /* Ubicacion */
 .ubicacion{
@@ -261,7 +276,7 @@ form .submit:hover{
   color: #636363;
   font-size: 1.1rem;
 }
-form img{
+.-form img{
   width: 60px;
   height: 60px;
 /*   border: solid; */
@@ -315,7 +330,7 @@ form img{
   margin: auto;
   overflow: hidden;
 }
-.row{
+.-row{
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -366,13 +381,13 @@ form img{
 }
   
 /*   Footer */
-  form img{
+  .-form img{
   width: 80px;
   height: 80px;
 /*   border: solid; */
 /*   overflow: hidden; */
 }
-  form h3{
+  .-form h3{
     font-size: 2.1rem;
     line-height: 2rem;
 /*     margin-bottom: 20px; */
@@ -385,7 +400,7 @@ form img{
   color: #fff;
   font-size: 1.8rem;
 }
-  form .submit{
+  .-form .submit{
   display: inline-block;
   margin: auto;
   background: rgba(56, 234, 118);
@@ -508,13 +523,13 @@ form img{
 }
   
   /*   Footer */
- form img{
+ .-form img{
   width: 85px;
   height: 85px;
 /*   border: solid; */
 /*   overflow: hidden; */
 }
- form h3{
+ .-form h3{
     font-size: 2.3rem;
     line-height: 2rem;
 /*     margin-bottom: 20px; */
@@ -524,10 +539,10 @@ form img{
 }
  .redes-sociales a{
   padding: 0 50px;
-  color: #fff;
+  color: #fff!important;
   font-size: 2rem;
 }
- form .submit{
+ .-form .submit{
   display: inline-block;
   margin: auto;
   background: rgba(56, 234, 118);
@@ -632,7 +647,7 @@ form img{
 }
   
 /*   Footer */
-  form .submit{
+  .-form .submit{
   display: inline-block;
   margin: auto;
   background: rgba(56, 234, 118);
@@ -644,13 +659,13 @@ form img{
   text-decoration: none;
   font-size: 1.2rem;
 }
-  form img{
+  .-form img{
   width: 90px;
   height: 90px;
 /*   border: solid; */
 /*   overflow: hidden; */
 }
-  form h3{
+  .-form h3{
     font-size: 2.4rem;
     line-height: 2rem;
     margin-bottom: 20px;
@@ -744,7 +759,7 @@ header{
   padding: 80px auto 50px auto;
 }  
 /*   Footer */
-  form h3{
+  .-form h3{
     font-size: 2.5rem;
     line-height: 2rem;
     margin-bottom: 20px;
@@ -760,7 +775,7 @@ header{
   font-size: 20px;
   color: #a4a4a4;
 }
-  form .submit{
+  .-form .submit{
   display: inline-block;
   margin: auto;
   background: rgba(56, 234, 118);
@@ -772,7 +787,7 @@ header{
   text-decoration: none;
   font-size: 1.2rem;
 }
-  form img{
+  .-form img{
   width: 100px;
   height: 100px;
 /*   border: solid; */
